[package]
edition = "2021"
name = "personio_tool"
version = "0.1.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
description = "Fill personio calendar with work days"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "personio_tool"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
time = { version = "0.3.6", features = ["parsing", "formatting", "macros", "serde"] }
rand = "0.8.4"
regex = "1.5.4"
anyhow = "1.0.53"
owo-colors = "3.2.0"